--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 
 development:
   adapter: sqlite3
-  database: db/my_database_development.sqlite3
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
 
@@ -16,12 +16,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: db/my_database_test.sqlite3
+  database: db/test.sqlite3
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: my_database_production
+  database: my_database_production.postgresql
   pool: 5
   timeout: 5000
