--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@
 
 development:
   adapter: sqlite3
-  database: db/my_database_development
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
 
@@ -16,9 +16,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: db/my_database_test
+  database: db/test.sqlite3
   pool: 5
   timeout: 5000
+
 
 production:
   adapter: postgresql
